Corrected the alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@
   /*Purple 260 - Red 355 - Blue 224 - Pink 340*/
   /* HSL color mode */
   --hue-color: 224;
-  --first-color: #284b63;
+  --first-color: #335f7d;
   --second-color: #000;
   /*===== Fuente y tipografia =====*/
   --body-font: 'Poppins', sans-serif;
@@ -48,7 +48,6 @@ body {
   margin: var(--header-height) 0 0 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
-  color: #000;
   background-color: #D9D9D9;
 }
 
@@ -116,13 +115,12 @@ img {
   box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
 }
 .nav-colored { 
-  background-color:#d9d9d9;
+  background-color:var(--first-color);
   transition: 0.5s;
 }
 .nav-transparent { 
   background-color:transparent;
   transition: 0.5s;
-
 }
 
 /*===== NAV =====*/
@@ -133,6 +131,10 @@ img {
   align-items: center;
   font-weight: var(--font-semi);
 }
+.nav__link {
+  color: #fff;
+}
+
 
 @media screen and (max-width: 767px) {
   .nav__menu {
@@ -142,7 +144,7 @@ img {
     width: 80%;
     height: 100%;
     padding: 2rem;
-    background-color: var(--second-color);
+    background-color: var(--first-color);
     transition: .5s;
   }
 }
@@ -171,7 +173,7 @@ img {
 }
 
 .nav__logo {
-  color: var(--second-color);
+  color: #000;
 }
 
 .nav__toggle {
@@ -354,7 +356,7 @@ img {
   row-gap: 2rem;
 }
 .work__img {
-  width: 18rem;
+  max-width: 18rem;
   background-color: white;
   padding: 1rem;
   margin: auto;
@@ -443,7 +445,7 @@ img {
 
 /* ===== FOOTER =====*/
 .footer {
-  background-color: #284b63;
+  background-color: var(--first-color);
   color: #fff;
   text-align: center;
   font-weight: var(--font-semi);
@@ -486,6 +488,17 @@ img {
     top: 10rem;
     text-align: center;
   }
+  .about__img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #exception{
+    width: 5rem;
+  }
+  .section{
+    width: 50%;
+  }
 }
 @media screen and (min-width:321px) and (max-width: 575px) {
   .home {
@@ -503,6 +516,12 @@ img {
     top: 12rem;
     text-align: center;
   }
+  .about__img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
 }
 
 @media screen and (min-width: 576px) {
@@ -577,12 +596,14 @@ img {
   .nav__item {
     margin-left: var(--mb-6);
     margin-bottom: 0;
+
   }
   .nav__toggle {
     display: none;
   }
   .nav__link {
-    color: var(--second-color);
+    color: #000;
+    font-weight: 500;
   }
   .home {
     padding: 8rem 0 2rem;
@@ -597,7 +618,9 @@ img {
   .about__img img {
     width: 300px;
     padding: 2rem;
+
   }
+
   #about-img{
     background-color: white;
     padding: 1rem;
